--- a/MyMoney/app/src/main/res/layout/content_spending.xml
+++ b/MyMoney/app/src/main/res/layout/content_spending.xml
@@ -68,9 +68,9 @@
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv"
+        android:id="@+id/rv_spending"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
 
