--- a/MyMoney/app/src/main/res/layout/item_button.xml
+++ b/MyMoney/app/src/main/res/layout/item_button.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -9,6 +10,5 @@
         android:id="@+id/btnSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/star"
         android:text="" />
 </LinearLayout>
