--- a/MyMoney/app/src/main/res/layout/scroll_item.xml
+++ b/MyMoney/app/src/main/res/layout/scroll_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
+        android:id="@+id/item_my"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -11,10 +12,10 @@
             android:id="@+id/img"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginBottom="10dp"
-            android:background="#e4b4b4" />
+            android:layout_marginBottom="10dp" />
 
         <TextView
+            android:id="@+id/name_section"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
