--- a/MyMoney/app/src/main/res/layout/fragment_statistic.xml
+++ b/MyMoney/app/src/main/res/layout/fragment_statistic.xml
@@ -1,10 +1,11 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.usr.mymoney.Activity.StatisticActivity$PlaceholderFragment">
+    android:orientation="vertical"
+    tools:context="com.example.usr.mymoney.Activity.StatisticActivity$PlaceholderFragment"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/section_label"
@@ -19,4 +20,14 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
-</android.support.constraint.ConstraintLayout>
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+</LinearLayout>
