--- a/MyMoney/app/src/main/res/layout/content_income.xml
+++ b/MyMoney/app/src/main/res/layout/content_income.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.usr.mymoney.Activity.IncomeActivity"
@@ -12,7 +14,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:labelFor="@id/edit_amount"
+        android:labelFor="@id/edit_income"
         android:text="@string/edit_amount"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
@@ -29,7 +31,7 @@
             android:layout_weight="1" />
 
         <EditText
-            android:id="@+id/edit_amount"
+            android:id="@+id/edit_income"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -54,7 +56,7 @@
             android:layout_weight="1" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/im_editing_income"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:backgroundTint="@android:color/white"
