--- a/MyMoney/app/src/main/res/layout/content_spending.xml
+++ b/MyMoney/app/src/main/res/layout/content_spending.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.usr.mymoney.Activity.SpendingActivity"
@@ -12,7 +14,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:labelFor="@id/edit_amount"
+        android:labelFor="@id/edit_spending"
         android:text="@string/edit_amount"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
@@ -29,13 +31,14 @@
             android:layout_weight="1" />
 
         <EditText
-            android:id="@+id/edit_amount"
+            android:id="@+id/edit_spending"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="numberDecimal"
             tools:layout_editor_absoluteX="72dp"
-            tools:layout_editor_absoluteY="2dp" />
+            tools:layout_editor_absoluteY="2dp"
+        />
 
         <Space
             android:layout_width="wrap_content"
@@ -54,7 +57,7 @@
             android:layout_weight="1" />
 
         <ImageButton
-            android:id="@+id/btn_editing"
+            android:id="@+id/im_editing_spending"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:backgroundTint="@android:color/white"
