--- a/MyMoney/app/src/main/res/menu/menu_statistic.xml
+++ b/MyMoney/app/src/main/res/menu/menu_statistic.xml
@@ -2,9 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.usr.mymoney.Activity.StatisticActivity">
+    <group />
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/current_count"
+        android:orderInCategory="300"
+        android:title="250.00"
+        android:actionLayout="@layout/activity_main"
+        app:showAsAction="ifRoom|collapseActionView"
+        />
 </menu>
