--- a/MyMoney/app/src/main/res/values/colors.xml
+++ b/MyMoney/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#221651</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="spinner">#a6a9f5</color>
 </resources>
