finished Statistic Activity without diagram

--- a/MyMoney/app/src/main/res/layout/activity_editing_one_obj.xml
+++ b/MyMoney/app/src/main/res/layout/activity_editing_one_obj.xml
@@ -4,23 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.usr.mymoney.Activity.SpendingActivity">
+    tools:context="com.example.usr.mymoney.Activity.EditingOneObjActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="Расходы"/>
+            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
+            app:title="Изменение"/>
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_spending" />
+    <include layout="@layout/content_editing_one_obj" />
+
+    <include layout="@layout/bottom_calendar"></include>
 
 </android.support.design.widget.CoordinatorLayout>
