--- a/MyMoney/app/src/main/res/values/colors.xml
+++ b/MyMoney/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#286bc2</color>
     <color name="colorPrimaryDark">#221651</color>
     <color name="colorAccent">#FF4081</color>
     <color name="spinner">#a6a9f5</color>
+    <color name="background">#FFFAFAFA</color>
+    <color name="background_material_light">#FFFAFAFA</color>
 </resources>
