--- a/MyMoney/app/src/main/res/layout/activity_editing_finance_obj.xml
+++ b/MyMoney/app/src/main/res/layout/activity_editing_finance_obj.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.usr.mymoney.Activity.EditinigFinanceObjActivity">
+    tools:context="com.example.usr.mymoney.Activity.EditingFinanceObjActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
+            app:title="Изменение"/>
 
     </android.support.design.widget.AppBarLayout>
 
