--- a/MyMoney/app/src/main/res/layout/cv_item.xml
+++ b/MyMoney/app/src/main/res/layout/cv_item.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#d7d7ec"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="5dp"
+        app:cardBackgroundColor="#d7d7ec">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -31,15 +31,23 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/section_img"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/section_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:textSize="20dp"/>
+                android:layout_alignParentTop="true"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/section_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/section_amount"
+                android:textSize="15sp" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
