--- a/MyMoney/app/src/main/res/layout/fragment_income_statistic.xml
+++ b/MyMoney/app/src/main/res/layout/fragment_income_statistic.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="com.example.usr.mymoney.IncomeStatisticFragment">
+    tools:context="com.example.usr.mymoney.Activity.IncomeStatisticFragment">
 
     <TextView
         android:layout_width="wrap_content"
