--- a/MyMoney/app/src/main/res/layout/item_fin_obj.xml
+++ b/MyMoney/app/src/main/res/layout/item_fin_obj.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_obj"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#d7d7ec"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="10dp"
+        app:cardBackgroundColor="#d7d7ec">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -38,14 +38,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"/>
+                android:layout_alignParentTop="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20dp" />
 
             <TextView
-                android:id="@+id/obj_date"
+                android:id="@+id/obj_day"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignRight="@id/obj_amount"
                 android:layout_below="@id/obj_amount"
-                android:layout_alignRight="@id/obj_amount" />
+                android:textColor="@color/colorPrimaryDark" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
