--- a/MyMoney/app/src/main/res/layout/content_info.xml
+++ b/MyMoney/app/src/main/res/layout/content_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,4 +8,10 @@
     tools:context="com.example.usr.mymoney.Activity.InfoActivity"
     tools:showIn="@layout/activity_info">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:text="@string/info_text" />
+
+</android.support.v4.widget.NestedScrollView>
