--- a/MyMoney/app/src/main/res/layout/bottom_calendar.xml
+++ b/MyMoney/app/src/main/res/layout/bottom_calendar.xml
@@ -4,11 +4,13 @@
     android:id="@+id/bottom_calendar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#e8ecf1"
     android:orientation="vertical"
     app:behavior_hideable="true"
-    app:behavior_peekHeight="40dp"
-    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-    android:background="#e8ecf1">
+    app:behavior_peekHeight="340dp"
+    android:clipToPadding="true"
+    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
     <TextView
         android:id="@+id/selected_date"
         android:layout_width="match_parent"
