--- a/MyMoney/app/src/main/res/layout/content_editing_finance_obj.xml
+++ b/MyMoney/app/src/main/res/layout/content_editing_finance_obj.xml
@@ -6,19 +6,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.usr.mymoney.Activity.EditinigFinanceObjActivity"
+    tools:context="com.example.usr.mymoney.Activity.EditingFinanceObjActivity"
     tools:showIn="@layout/activity_editing_finance_obj">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_editing_fin_obj"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-
-
-
-    </LinearLayout>
+        android:text="Список пуст"
+        android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_editing_obj"
