--- a/MyMoney/app/src/main/res/layout/content_editing_one_obj.xml
+++ b/MyMoney/app/src/main/res/layout/content_editing_one_obj.xml
@@ -9,67 +9,66 @@
     tools:context="com.example.usr.mymoney.Activity.EditingOneObjActivity"
     tools:showIn="@layout/activity_editing_one_obj">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_name_obj"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:text="Статья: "
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_name_obj"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Статья: "
-                android:textSize="20sp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/colorPrimaryDark" />
+        <Spinner
+            android:id="@+id/spinner_name_section"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" />
 
-            <Spinner
-                android:id="@+id/spinner_name_section"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_amount_obj"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Сумма:"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_amount_obj"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Сумма:"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="20sp" />
+        <EditText
+            android:id="@+id/edit_amount_obj"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:textColor="@android:color/black" />
 
-            <EditText
-                android:id="@+id/edit_amount_obj"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:textColor="@android:color/black" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_update_obj"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Изменить"
+            android:textSize="15dp"
+            android:layout_marginBottom="5dp"/>
 
-                <Button
-                    android:id="@+id/btn_delete"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.1"
-                    android:text="Удалить" />
+        <TextView
+            android:id="@+id/selected_date"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:text="Date"
+            android:textColor="#e4ebf2"
+            android:textSize="22dp" />
 
-                <android.support.v4.widget.Space
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.02" />
+        <CalendarView
+            android:id="@+id/calendar"
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
 
-                <Button
-                    android:id="@+id/btn_update_obj"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.1"
-                    android:text="Изменить" />
-
-
-            </LinearLayout>
-        </LinearLayout>
+        </CalendarView>
+    </LinearLayout>
 
 
 </android.support.design.widget.CoordinatorLayout>
