--- a/MyMoney/app/src/main/res/layout/fragment_spending_statistic.xml
+++ b/MyMoney/app/src/main/res/layout/fragment_spending_statistic.xml
@@ -1,33 +1,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:orientation="vertical"
-tools:context="com.example.usr.mymoney.Activity.SpendingStatisticFragment">
-
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:textAllCaps="false"
-    android:text="Расходы"
-    android:textColor="#062d1d"
-    android:textSize="24dp"
-    android:layout_marginBottom="10dp"/>
-
-<Spinner
-    android:id="@+id/spinner_spend"
-    android:layout_width="150dp"
-    android:layout_height="30dp"
-    android:layout_gravity="center"
-    android:layout_marginBottom="10dp"
-    android:background="@color/spinner" />
-
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/rv_statistic_spend"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    tools:context="com.example.usr.mymoney.Activity.SpendingStatisticFragment">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:text="Выберите месяц:"
+        android:textAllCaps="false"
+        android:textColor="#062d1d"
+        android:textSize="20dp" />
+
+    <Spinner
+        android:id="@+id/spinner_spend"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="15dp"
+        android:background="@color/spinner" />
+
+    <TextView
+        android:id="@+id/tv_fragm_spend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Тут будут отображены ваши расходы"
+        android:visibility="visible" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_statistic_spend"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
