--- a/MyMoney/app/src/main/res/values/styles.xml
+++ b/MyMoney/app/src/main/res/values/styles.xml
@@ -6,8 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:titleTextStyle">@style/ActionBar.TextStyle</item>
     </style>
-
+    <style name="ActionBar.TextStyle" parent="">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
