--- a/MyMoney/app/src/main/res/layout/fragment_income_statistic.xml
+++ b/MyMoney/app/src/main/res/layout/fragment_income_statistic.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Тут будут отображены ваши доходы"
-        android:visibility="gone"/>
+        android:visibility="invisible"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_statistic_inc"
